--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MisterAlexa",
   "version": "1.0.0",
-  "description": "",
+  "description": "Skill to use Mister Spex with Amazon Echo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "alexa-sdk": "^1.0.8",
-    "@google/maps": "^0.4.2"
+    "bluebird": "^3.5.1",
+    "google-distance-matrix": "^1.0.0",
+    "lodash": "^4.17.4"
   },
   "bugs": {
     "url": "https://github.com/MisterSpex/MisterAlexa/issues"
